# trivialized_from

./: Cargo.toml  readme.md
src/: lib.rs
src/metadata/: mod.rs
src/metadata/attributes/: from.rs  into.rs  macro_transform.rs  mod.rs  transform.rs
tests/: example.rs  test.rs
tests/compile_tests/: casual_test.rs  empty_struct_to_empty_struct.rs  forgot_to_add_derive.rs  forgot_to_add_derive.stderr  forgot_to_import.rs  forgot_to_import.stderr  from_ignores_duplicates.rs  from_occurring_more_than_once.rs  from_with_tuple.rs  input_struct_with_exceeding_fields.rs  mod.rs  output_struct_with_exceeding_fields.rs  output_struct_with_exceeding_fields.stderr  structs_with_into_fields.rs  structs_with_into_option_fields.rs  structs_with_into_vec_fields.rs  structs_with_macrotransform_plain_fields.rs  structs_with_multiple_annotations_on_plain_fields.rs  structs_with_plain_fields.rs  structs_with_transform_plain_fields.rs
