[package]
name = "trivialized_from"
version = "0.1.0"
authors = ["Mr.Schyzo <catapano-marco@mail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn={version = "1.0.73", features = ["full"]}
quote="1.0.9"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.27"