[package]
name = "trivialized_from"
version = "0.1.0"
authors = ["Mr.Schyzo <catapano-marco@mail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = {version = "1.0.43", features = ["diff"]}

[dependencies]
syn = {version = "1.0.73", features = ["full"]}
quote = "1.0.9"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.27"